--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title></title>
-<<<<<<< HEAD
-=======
     <h1>test1에서 바꾼 변경사항</h1>
->>>>>>> test1
   </head>
-  <body></body>
+  <body>
+    <h1>test3에서 만든 태그</h1>
+  </body>
 </html>
