--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title></title>
-    <h1>test1에서 바꾼 변경사항</h1>
+    <title>test3</title>
   </head>
   <body>
     <h1>test3에서 만든 태그</h1>
