--- a/index.html
+++ b/index.html
@@ -3,11 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title></title>
-<<<<<<< HEAD
-=======
+    <title>test5 branch title</title>
     <h1>test1에서 바꾼 변경사항</h1>
->>>>>>> test1
   </head>
   <body></body>
 </html>
